--- a/mini-oxygen.config.json
+++ b/mini-oxygen.config.json
@@ -1,7 +1,7 @@
 {
   "port": 3000,
   "workerFile": "dist/worker.js",
-  "assetsDir": "public/build",
+  "assetsDir": "public/client",
   "publicPath": "/build/",
   "buildCommand": "node ./scripts/build.mjs",
   "watch": false,
